WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53958
Find bouncy is missing content on pages with framesets
https://bugs.webkit.org/show_bug.cgi?id=53958
Summary
Find bouncy is missing content on pages with framesets
Anders Carlsson
Reported
2011-02-07 16:17:51 PST
Find bouncy is missing content on pages with framesets
Attachments
Patch
(3.01 KB, patch)
2011-02-07 16:19 PST
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-02-07 16:19:12 PST
Created
attachment 81548
[details]
Patch
Anders Carlsson
Comment 2
2011-02-07 16:29:26 PST
Committed
r77862
: <
http://trac.webkit.org/changeset/77862
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug