2011-02-07  Anders Carlsson  <andersca@apple.com>

Reviewed by Darin Adler.

        Find bouncy is missing content on pages with framesets
        https://bugs.webkit.org/show_bug.cgi?id=53958
        <rdar://problem/8904447>

        Fix paint rect computation; FrameView::paint expects the paint rect to be in the
        parent widget's coordinate system.

        * WebProcess/WebPage/FindController.cpp:
        (WebKit::FindController::updateFindIndicator):


Canonical link: https://commits.webkit.org/67921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77862 268f45cc-cd09-0410-ab3c-d52691b4dbfc